<resources>
    <string name="app_name">Color Flood</string>


    <string name="mode_casual">Casual</string>
    <string name="mode_step_challenge">Step Challenge</string>
    <string name="mode_vs_computer">VS Computer</string>
    <string name="mode_2player">2 Players</string>
    <string name="settings">Settings</string>
    <string name="best_score">Best Score</string>
    <string name="rate_app">Rate this app</string>
    <string name="share">Share</string>

    <string name="mission_completed">Mission Completed</string>
    <string name="completed_msg">completed in %s steps</string>
    <string name="game_over">Game Over !</string>
    <string name="play_again">Play Again ?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="you_win">You Win !</string>
    <string name="you_lose">You Lose !</string>

    <string name="settings_grid_size">Grid Size</string>
    <string name="settings_color">Color</string>
    <string name="settings_color_alpha">Color Alpha</string>
    <string name="settings_sound">Sound</string>
    <string name="settings_bgm">Music</string>
    <string name="settings_borders">Borders</string>

    <string name="settings_on">On</string>
    <string name="settings_off">Off</string>

    <string name="quit_msg">Quit the Game ?</string>
    <string name="share_msg">"Share an app for you."</string>

</resources>
