<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_activity_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="100dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="30dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="36sp"/>

    <LinearLayout
        style="@style/HomeLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <Button
            android:id="@+id/btn_casual"
            style="@style/HomeBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/mode_casual"/>

    </LinearLayout>


    <LinearLayout
        style="@style/HomeLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <Button
            android:id="@+id/btn_step_challenge"
            style="@style/HomeBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/mode_step_challenge"/>
    </LinearLayout>


    <LinearLayout
        style="@style/HomeLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <Button
            android:id="@+id/btn_2player"
            style="@style/HomeBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/mode_2player"/>
    </LinearLayout>


    <LinearLayout
        style="@style/HomeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageButton
            android:id="@+id/btn_rate_app"
            style="@style/HomeBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/rate_app"
            android:src="@drawable/ic_rate"/>

        <ImageButton
            android:id="@+id/btn_share"
            style="@style/HomeBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/share"
            android:src="@drawable/ic_share"/>

        <ImageButton
            android:id="@+id/btn_best_score"
            style="@style/HomeBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/best_score"
            android:src="@drawable/ic_best"/>

        <ImageButton
            android:id="@+id/btn_settings"
            style="@style/HomeBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/settings"
            android:src="@drawable/ic_settings"/>


    </LinearLayout>


</LinearLayout>
