<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#146"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="30dp"
        android:text="@string/settings"
        android:textColor="@android:color/white"
        android:textSize="32sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/btn_grid_size"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height">

                <TextView
                    style="@style/SettingsLabel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/settings_grid_size"/>

                <TextView
                    android:id="@+id/tv_grid_size"
                    style="@style/SettingsValue"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/btn_sound"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height">

                <TextView
                    style="@style/SettingsLabel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/settings_sound"/>

                <TextView
                    android:id="@+id/tv_sound"
                    style="@style/SettingsValue"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_music"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height">

                <TextView
                    style="@style/SettingsLabel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/settings_bgm"/>

                <TextView
                    android:id="@+id/tv_music"
                    style="@style/SettingsValue"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_borders"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height">

                <TextView
                    style="@style/SettingsLabel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/settings_borders"/>

                <TextView
                    android:id="@+id/tv_borders"
                    style="@style/SettingsValue"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/btn_ok_bg"
        android:text="@string/ok"/>

</LinearLayout>
